--- a/less/home-page.less
+++ b/less/home-page.less
@@ -100,6 +100,7 @@
           height: 70px;
           line-height: 70px;
           order: 2;
+          margin-bottom: 15px;
         }
       }
     }
